--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>🌈 Mashup Interactivo - Estaciones del Año 🌈</h1>
-        <h3>Creado por: Tu Nombre - PWD 7° 2°B</h3>
+        <h3>Creado por: Candela Molinari - PWD 7° 2°B</h3>
     </header>
 
     <main>
